--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,8 @@
-spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/contatos
-spring.datasource.username=root
-spring.datasource.password=jason123
+spring.datasource.url=${JDBC_DATASOURCE_URL}
+#spring.jpa.hibernate.ddl-auto=update
+#spring.datasource.url=jdbc:mysql://localhost:3306/contatos
+#spring.datasource.username=root
+#spring.datasource.password=jason123
+
+
 
