--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,6 @@
 spring.datasource.url=${JDBC_DATASOURCE_URL}
+spring.datasource.generate-ddl=true
+
 #spring.jpa.hibernate.ddl-auto=update
 #spring.datasource.url=jdbc:mysql://localhost:3306/contatos
 #spring.datasource.username=root
