--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=${JDBC_DATASOURCE_URL}
+spring.datasource.url=${DATABASE_URL}
 spring.datasource.generate-ddl=true
 
 #spring.jpa.hibernate.ddl-auto=update
