--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,7 @@
 			<groupId>org.postgresql</groupId>
 			<artifactId>postgresql</artifactId>
 			<version>42.2.23</version>
+			<scope>runtime</scope>
 		</dependency>
 
 		<dependency>
