--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,4 @@
-spring.datasource.url=${DATABASE_URL}
-spring.datasource.generate-ddl=true
-
+spring.datasource.url=${CLEARDB_DATASOURCE_URL}
 #spring.jpa.hibernate.ddl-auto=update
 #spring.datasource.url=jdbc:mysql://localhost:3306/contatos
 #spring.datasource.username=root
