--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,18 @@
-spring.datasource.url=${CLEARDB_DATASOURCE_URL}
+#spring.datasource.url=${CLEARDB_DATASOURCE_URL}
+
 #spring.jpa.hibernate.ddl-auto=update
 #spring.datasource.url=jdbc:mysql://localhost:3306/contatos
 #spring.datasource.username=root
 #spring.datasource.password=jason123
+
+spring.datasource.url=jdbc:mysql://${DBHOSTNAME}:3306/${DBSCHEMA}
+spring.datasource.username=${DBUSERNAME}
+spring.datasource.password=${DBPASSWORD}
+spring.jpa.hibernate.ddl-auo=update
+spring.jpa.show.sql=true
+spring.jpa.hibernate.naming-strategy=org.hibernate.cfg.ImprovedNamingStrategy
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+
 
 
 
